--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Stopwatch</title>
-    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,7 +22,7 @@
         <button id="reset-button" class="d-none">Reset</button>
         <button id="lap-button" class="d-none">Lap</button>
       </div>
-      <ol id="lap-list"></ul>
+      <ol id="lap-list"></ol>
     </div>
 
     <script
